--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,18 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import MusicPlayer from '../components/MusicPlayer/MusicPlayer'; // asume que es MusicPlayer.jsx
+import QueuerFetcher from '../components/QueueList/List'
+import Searcher from '../components/Searcher/Searcher'
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Reproductor de Música</title>
+  </head>
+  <body>
+    <Searcher client:load />
+    <MusicPlayer client:load />
+    <QueuerFetcher client:load />
+  </body>
+</html>
